--- a/public/index.html
+++ b/public/index.html
@@ -4,49 +4,174 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    
-    <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:site" content="@vercel"/>
-    <meta property="og:site_name" content="Open Graph Image as a Service"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:title" content="Open Graph Image as a Service"/>
-    <meta property="og:locale" content="en"/>
-    <meta property="og:url" content="https://og-image.vercel.app"/>
-    <link rel="canonical" href="https://og-image.vercel.app"/>
-    <meta name="description" content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media. Proudly hosted on Vercel."/>
-    <meta property="og:description" content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media. Proudly hosted on Vercel."/>
-    <meta property="og:image" content="https://og-image.vercel.app/Open%20Graph%20Image%20as%20a%20Service.png?theme=light&amp;md=1&amp;fontSize=95px&amp;images=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Ffront%2Fassets%2Fdesign%2Fzeit-black-triangle.svg"/>
-    <title>Open Graph Image as a Service</title>
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@vercel" />
+
+    <meta property="og:site_name" content="Open Graph Image as a Service" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Open Graph Image as a Service" />
+    <meta property="og:locale" content="en" />
+    <meta property="og:url" content="https://og-image.vercel.app" />
+    <link rel="canonical" href="https://og-image.vercel.app" />
+
+    <meta name="description"
+        content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
+    <meta property="og:description"
+        content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
+    <meta property="og:image"
+        content="https://og-image.vercel.app/Open%20Graph%20Image%20as%20a%20Service.png?theme=light&amp;md=1&amp;fontSize=95px&amp;images=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Ffront%2Fassets%2Fdesign%2Fzeit-black-triangle.svg" />
+    <title>Creative Commons Open Graph Image as a Service</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="stylesheet" href="https://unpkg.com/@creativecommons/vocabulary/css/vocabulary.css">
+    <script src="https://unpkg.com/@creativecommons/vocabulary/js/vocabulary.js"></script>
 </head>
+
 <body>
-    <div class="container">
-        <div class="wrapper">
-            <a href="https://github.com/vercel/og-image" class="github-corner" aria-label="View source on GitHub">
-                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
-                    <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-                    <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-                    <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body">
-                </path>
-                </svg>
-            </a>
-            <h1>Open Graph Image as a Service</h1>
-            <div id="app">
-                <em>Loading...</em>
+    <div class="navbar">
+        <div class="navbar-brand">
+            <div>
+                <h1 class="title is-2">CC Open Graph Image Generator</h1>
+                <p>Generate share images for social media, powered by <a
+                        href="https://cc-vocabulary.netlify.app">Vocabulary.</a>
+                </p>
             </div>
-            <div class="center">
-                <h2>What is this?</h2>
-                <p>This is a service that generates dynamic <a href="http://ogp.me">Open Graph</a> images that you can embed in your <code>&lt;meta&gt;</code> tags.</p>
-                <p>For each keystroke, headless chromium is used to render an HTML page and take a screenshot of the result which gets cached.</p>
-                <p>Find out how this works and deploy your own image generator by visiting <a href="https://github.com/vercel/og-image">GitHub</a>.</p>
-                <footer>Proudly hosted on <a href="https://vercel.com">▲Vercel</a></footer>
+        </div>
+        <div class="navbar-menu">
+            <!-- <div class="navbar-end">
+                <a class="navbar-item" href="">
+                    CC Open Source
+                </a>
+            </div> -->
+        </div>
+    </div>
+    <div class="has-background-grey-lighter">
+        <div id="app" class="container">
+            <em>Loading...</em>
+        </div>
+    </div>
+
+    <div class="section">
+        <div class="container">
+            <div class="margin-top-large margin-bottom-large">
+                <h2 class="title is-3">What is this?</h2>
+                <p>This is a service that generates dynamic <a href="http://ogp.me">Open Graph</a> images that you can
+                    embed in your <code>&lt;meta&gt;</code> tags.</p>
+                <p>For each keystroke, headless chromium is used to render an HTML page and take a screenshot of the
+                    result which gets cached.</p>
             </div>
         </div>
     </div>
+
+    </div>
+
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="container">
+            <div class="columns">
+                <div class="column is-one-quarter">
+                    <a href="https://creativecommons.org" class="main-logo margin-bottom-bigger">
+                        <span class="has-text-white">
+                            <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet"
+                                viewBox="0 0 304 73">
+                                <use href="#logomark"></use>
+                            </svg>
+                        </span>
+                    </a>
+                    <div>
+                        <address class="margin-bottom-normal">Creative Commons<br />PO Box 1866, Mountain View CA 94042
+                        </address>
+                        <a href="mailto:info@creativecommons.org" class="mail">info@creativecommons.org</a><br />
+                        <a href="tel://+1-415-429-6753" class="phone">+1-415-429-6753</a>
+                    </div>
+                    <div class="margin-vertical-large">
+                        <a href="https://www.instagram.com/creativecommons" class="social has-text-white"
+                            target="_blank" rel="noopener">
+                            <i class="icon margin-right-small is-size-4">instagram</i>
+                        </a>
+                        <a href="https://www.twitter.com/creativecommons" class="social has-text-white" target="_blank"
+                            rel="noopener">
+                            <i class="icon margin-right-small is-size-4">twitter</i>
+                        </a>
+                        <a href="https://www.facebook.com/creativecommons" class="social has-text-white" target="_blank"
+                            rel="noopener">
+                            <i class="icon margin-right-small is-size-4">facebook</i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/creative-commons/" class="social has-text-white"
+                            target="_blank" rel="noopener">
+                            <i class="icon margin-right-small is-size-4">linkedin</i>
+                        </a>
+                    </div>
+                </div>
+                <div class="column is-three-quarters">
+                    <div class="columns">
+                        <div class="column is-full">
+                            <nav class="footer-navigation">
+                                <ul class="menu">
+                                    <li>
+                                        <a href="{{ '/blog'|url }}" class="menu-item">Blog</a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ '/contributing-code/projects'|url }}" class="menu-item">Project
+                                            List</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="columns">
+                        <div class="column is-two-thirds">
+                            <div class="subscription">
+                                <h5 class="b-header">Subscribe to our newsletter</h5>
+                                <form class="newsletter">
+                                    <input type="text" class="input" placeholder="Your email">
+                                    <input type="submit" value="subscribe" class="button small">
+                                </form>
+                            </div>
+                            <div class="attribution margin-top-bigger">
+                                <p class="caption">
+                                    Except where otherwise
+                                    <a href="https://creativecommons.org/policies#license" target="_blank"
+                                        rel="noopener">noted</a>,
+                                    content on this site is licensed under a
+                                    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
+                                        rel="noopener">Creative Commons
+                                        Attribution 4.0 International license</a>.
+                                    <a href="https://creativecommons.org/website-icons" target="_blank"
+                                        rel="noopener">Icons</a>
+                                    by
+                                    <a href="https://fontawesome.com/" target="_blank" rel="noopener">Font Awesome</a>.
+                                </p>
+                                <div class="margin-top-smaller">
+                                    <i class="icon margin-right-small is-size-4">cclogo</i>
+                                    <i class="icon margin-right-small is-size-4">ccby</i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column is-one-third">
+                            <aside class="donate-section">
+                                <h5>Our work relies on you!</h5>
+                                <p>Help us keep the internet free and open.</p>
+                                <a class="button small donate" href="http://creativecommons.org/donate">
+                                    <i class="icon cc-letterheart margin-right-small is-size-5 padding-top-smaller"></i>
+                                    Donate now
+                                </a>
+                            </aside>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dot-dom@0.3.0/dotdom.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/copee@1.0.6/dist/copee.umd.js"></script>
     <script type="text/javascript" src="dist/web/index.js"></script>
+    <script>
+        const globalHeaderInstance = vocabulary.createGlobalHeader()
+    </script>
 </body>
 
 </html>
