--- a/public/index.html
+++ b/public/index.html
@@ -2,176 +2,177 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta charset="utf-8" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vercel" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@cc_opensource" />
 
-    <meta property="og:site_name" content="Open Graph Image as a Service" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Open Graph Image as a Service" />
-    <meta property="og:locale" content="en" />
-    <meta property="og:url" content="https://og-image.vercel.app" />
-    <link rel="canonical" href="https://og-image.vercel.app" />
+  <meta property="og:site_name" content="CC Open Graph Image as a Service" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Open Graph Image as a Service" />
+  <meta property="og:locale" content="en" />
+  <meta property="og:url" content="https://cc-og-image.vercel.app" />
+  <link rel="icon" href="favicon.png">
+  <link rel="canonical" href="https://cc-og-image.vercel.app" />
 
-    <meta name="description"
-        content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
-    <meta property="og:description"
-        content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
-    <meta property="og:image"
-        content="https://og-image.vercel.app/Open%20Graph%20Image%20as%20a%20Service.png?theme=light&amp;md=1&amp;fontSize=95px&amp;images=https%3A%2F%2Fassets.vercel.com%2Fimage%2Fupload%2Ffront%2Fassets%2Fdesign%2Fzeit-black-triangle.svg" />
-    <title>Creative Commons Open Graph Image as a Service</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+  <meta name="description"
+    content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
+  <meta property="og:description"
+    content="A service to generate dynamic Open Graph images on-the-fly for the purpose of sharing a website to social media." />
+  <meta property="og:image"
+    content="https://cc-og-image.vercel.app/Open%20Graph%20Image%20Generator.png?theme=light&md=1&fontSize=100px&images=https%3A%2F%2Fcc-vocabulary.netlify.app%2Flogos%2Fproducts%2Fopen_source.svg%23opensource" />
+  <title>Creative Commons Open Graph Image Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 
-    <link rel="stylesheet" href="https://unpkg.com/@creativecommons/vocabulary/css/vocabulary.css">
-    <script src="https://unpkg.com/@creativecommons/vocabulary/js/vocabulary.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/@creativecommons/vocabulary/css/vocabulary.css">
+  <script src="https://unpkg.com/@creativecommons/vocabulary/js/vocabulary.js"></script>
 </head>
 
 <body>
-    <div class="navbar">
-        <div class="navbar-brand">
-            <div>
-                <h1 class="title is-2">CC Open Graph Image Generator</h1>
-                <p>Generate share images for social media, powered by <a
-                        href="https://cc-vocabulary.netlify.app">Vocabulary.</a>
-                </p>
-            </div>
-        </div>
-        <div class="navbar-menu">
-            <!-- <div class="navbar-end">
+  <div class="navbar">
+    <div class="navbar-brand">
+      <div>
+        <h1 class="title is-2">CC Open Graph Image Generator</h1>
+        <p>Generate share images for social media, powered by <a
+            href="https://cc-vocabulary.netlify.app">Vocabulary.</a>
+        </p>
+      </div>
+    </div>
+    <div class="navbar-menu">
+      <!-- <div class="navbar-end">
                 <a class="navbar-item" href="">
                     CC Open Source
                 </a>
             </div> -->
-        </div>
     </div>
-    <div class="has-background-grey-lighter">
-        <div id="app" class="container">
-            <em>Loading...</em>
-        </div>
+  </div>
+  <div class="has-background-grey-lighter">
+    <div id="app" class="container">
+      <em>Loading...</em>
     </div>
+  </div>
 
-    <div class="section">
-        <div class="container">
-            <div class="margin-top-large margin-bottom-large">
-                <h2 class="title is-3">What is this?</h2>
-                <p>This is a service that generates dynamic <a href="http://ogp.me">Open Graph</a> images that you can
-                    embed in your <code>&lt;meta&gt;</code> tags.</p>
-                <p>For each keystroke, headless chromium is used to render an HTML page and take a screenshot of the
-                    result which gets cached.</p>
+  <div class="section">
+    <div class="container">
+      <div class="margin-top-large margin-bottom-large">
+        <h2 class="title is-3">What is this?</h2>
+        <p>This is a service that generates dynamic <a href="http://ogp.me">Open Graph</a> images that you can
+          embed in your <code>&lt;meta&gt;</code> tags.</p>
+        <p>For each keystroke, headless chromium is used to render an HTML page and take a screenshot of the
+          result which gets cached.</p>
+      </div>
+    </div>
+  </div>
+
+  </div>
+
+  <!-- Footer -->
+  <footer class="main-footer">
+    <div class="container">
+      <div class="columns">
+        <div class="column is-one-quarter">
+          <a href="https://creativecommons.org" class="main-logo margin-bottom-bigger">
+            <span class="has-text-white">
+              <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" viewBox="0 0 304 73">
+                <use href="#logomark"></use>
+              </svg>
+            </span>
+          </a>
+          <div>
+            <address class="margin-bottom-normal">Creative Commons<br />PO Box 1866, Mountain View CA 94042
+            </address>
+            <a href="mailto:info@creativecommons.org" class="mail">info@creativecommons.org</a><br />
+            <a href="tel://+1-415-429-6753" class="phone">+1-415-429-6753</a>
+          </div>
+          <div class="margin-vertical-large">
+            <a href="https://www.instagram.com/creativecommons" class="social has-text-white" target="_blank"
+              rel="noopener">
+              <i class="icon margin-right-small is-size-4">instagram</i>
+            </a>
+            <a href="https://www.twitter.com/creativecommons" class="social has-text-white" target="_blank"
+              rel="noopener">
+              <i class="icon margin-right-small is-size-4">twitter</i>
+            </a>
+            <a href="https://www.facebook.com/creativecommons" class="social has-text-white" target="_blank"
+              rel="noopener">
+              <i class="icon margin-right-small is-size-4">facebook</i>
+            </a>
+            <a href="https://www.linkedin.com/company/creative-commons/" class="social has-text-white" target="_blank"
+              rel="noopener">
+              <i class="icon margin-right-small is-size-4">linkedin</i>
+            </a>
+          </div>
+        </div>
+        <div class="column is-three-quarters">
+          <div class="columns">
+            <div class="column is-full">
+              <nav class="footer-navigation">
+                <ul class="menu">
+                  <li>
+                    <a href="https://github.com/creativecommons/og-image-generator" class="menu-item">GitHub
+                      Repository</a>
+                  </li>
+                  <li>
+                    <a href="https://opensource.creativecommons.org/blog" class="menu-item">Open Source Blog</a>
+                  </li>
+                  <li>
+                    <a href="https://opensource.creativecommons.org/projects" class="menu-item">Project
+                      List</a>
+                  </li>
+                </ul>
+              </nav>
             </div>
-        </div>
-    </div>
-
-    </div>
-
-    <!-- Footer -->
-    <footer class="main-footer">
-        <div class="container">
-            <div class="columns">
-                <div class="column is-one-quarter">
-                    <a href="https://creativecommons.org" class="main-logo margin-bottom-bigger">
-                        <span class="has-text-white">
-                            <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet"
-                                viewBox="0 0 304 73">
-                                <use href="#logomark"></use>
-                            </svg>
-                        </span>
-                    </a>
-                    <div>
-                        <address class="margin-bottom-normal">Creative Commons<br />PO Box 1866, Mountain View CA 94042
-                        </address>
-                        <a href="mailto:info@creativecommons.org" class="mail">info@creativecommons.org</a><br />
-                        <a href="tel://+1-415-429-6753" class="phone">+1-415-429-6753</a>
-                    </div>
-                    <div class="margin-vertical-large">
-                        <a href="https://www.instagram.com/creativecommons" class="social has-text-white"
-                            target="_blank" rel="noopener">
-                            <i class="icon margin-right-small is-size-4">instagram</i>
-                        </a>
-                        <a href="https://www.twitter.com/creativecommons" class="social has-text-white" target="_blank"
-                            rel="noopener">
-                            <i class="icon margin-right-small is-size-4">twitter</i>
-                        </a>
-                        <a href="https://www.facebook.com/creativecommons" class="social has-text-white" target="_blank"
-                            rel="noopener">
-                            <i class="icon margin-right-small is-size-4">facebook</i>
-                        </a>
-                        <a href="https://www.linkedin.com/company/creative-commons/" class="social has-text-white"
-                            target="_blank" rel="noopener">
-                            <i class="icon margin-right-small is-size-4">linkedin</i>
-                        </a>
-                    </div>
+          </div>
+          <div class="columns">
+            <div class="column is-two-thirds">
+              <div class="subscription">
+                <h5 class="b-header">Subscribe to our newsletter</h5>
+                <form class="newsletter">
+                  <input type="text" class="input" placeholder="Your email">
+                  <input type="submit" value="subscribe" class="button small">
+                </form>
+              </div>
+              <div class="attribution margin-top-bigger">
+                <p class="caption">
+                  Except where otherwise
+                  <a href="https://creativecommons.org/policies#license" target="_blank" rel="noopener">noted</a>,
+                  content on this site is licensed under a
+                  <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener">Creative Commons
+                    Attribution 4.0 International license</a>.
+                  <a href="https://creativecommons.org/website-icons" target="_blank" rel="noopener">Icons</a>
+                  by
+                  <a href="https://fontawesome.com/" target="_blank" rel="noopener">Font Awesome</a>.
+                </p>
+                <div class="margin-top-smaller">
+                  <i class="icon margin-right-small is-size-4">cclogo</i>
+                  <i class="icon margin-right-small is-size-4">ccby</i>
                 </div>
-                <div class="column is-three-quarters">
-                    <div class="columns">
-                        <div class="column is-full">
-                            <nav class="footer-navigation">
-                                <ul class="menu">
-                                    <li>
-                                        <a href="{{ '/blog'|url }}" class="menu-item">Blog</a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ '/contributing-code/projects'|url }}" class="menu-item">Project
-                                            List</a>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                    <div class="columns">
-                        <div class="column is-two-thirds">
-                            <div class="subscription">
-                                <h5 class="b-header">Subscribe to our newsletter</h5>
-                                <form class="newsletter">
-                                    <input type="text" class="input" placeholder="Your email">
-                                    <input type="submit" value="subscribe" class="button small">
-                                </form>
-                            </div>
-                            <div class="attribution margin-top-bigger">
-                                <p class="caption">
-                                    Except where otherwise
-                                    <a href="https://creativecommons.org/policies#license" target="_blank"
-                                        rel="noopener">noted</a>,
-                                    content on this site is licensed under a
-                                    <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"
-                                        rel="noopener">Creative Commons
-                                        Attribution 4.0 International license</a>.
-                                    <a href="https://creativecommons.org/website-icons" target="_blank"
-                                        rel="noopener">Icons</a>
-                                    by
-                                    <a href="https://fontawesome.com/" target="_blank" rel="noopener">Font Awesome</a>.
-                                </p>
-                                <div class="margin-top-smaller">
-                                    <i class="icon margin-right-small is-size-4">cclogo</i>
-                                    <i class="icon margin-right-small is-size-4">ccby</i>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="column is-one-third">
-                            <aside class="donate-section">
-                                <h5>Our work relies on you!</h5>
-                                <p>Help us keep the internet free and open.</p>
-                                <a class="button small donate" href="http://creativecommons.org/donate">
-                                    <i class="icon cc-letterheart margin-right-small is-size-5 padding-top-smaller"></i>
-                                    Donate now
-                                </a>
-                            </aside>
-                        </div>
-                    </div>
-                </div>
+              </div>
             </div>
+            <div class="column is-one-third">
+              <aside class="donate-section">
+                <h5>Our work relies on you!</h5>
+                <p>Help us keep the internet free and open.</p>
+                <a class="button small donate" href="http://creativecommons.org/donate">
+                  <i class="icon cc-letterheart margin-right-small is-size-5 padding-top-smaller"></i>
+                  Donate now
+                </a>
+              </aside>
+            </div>
+          </div>
         </div>
-    </footer>
+      </div>
+    </div>
+  </footer>
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dot-dom@0.3.0/dotdom.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/copee@1.0.6/dist/copee.umd.js"></script>
-    <script type="text/javascript" src="dist/web/index.js"></script>
-    <script>
-        const globalHeaderInstance = vocabulary.createGlobalHeader()
-    </script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/dot-dom@0.3.0/dotdom.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/copee@1.0.6/dist/copee.umd.js"></script>
+  <script type="text/javascript" src="dist/web/index.js"></script>
+  <script>
+    const globalHeaderInstance = vocabulary.createGlobalHeader()
+  </script>
 </body>
 
 </html>
